# AgentBench

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
skills/agentbench-plan/: SKILL.md
skills/agentbench-plan/references/: blocks.md
src/: AgentPane.jsx  App.jsx  PlanComposer.jsx  RunCommandsDialog.jsx  SessionsDialog.jsx  SettingsWindow.jsx  main.jsx  settings.js  styles.css  themes.js  usePaneDrag.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/broker/: mod.rs
src/chat/: ChatView.jsx  Markdown.jsx  ToolCard.jsx  records.js
src/components/: CommandMenu.jsx  Logo.jsx  WindowControls.jsx
src/components/ui/: dialog.jsx  dropdown-menu.jsx
src/lib/: autoTheme.js  hotkey.js  ptyPaste.js  updater.js
src/plan/: CommentLayer.jsx  PlanOverlay.jsx  PlanPane.jsx  PlanRenderer.jsx  PlanTestHarness.jsx  feedback.jsx  plan.css  registry.js
src/plan/blocks/: ApiEndpoint.jsx  Callout.jsx  Checklist.jsx  Code.jsx  DataModel.jsx  Diagram.jsx  FileTree.jsx  Options.jsx  QuestionForm.jsx
src/plan/blocks/canvas/: Canvas.jsx  primitives.jsx
src/plan/lib/: heroSlot.js  mermaid.js  shiki.js  theme.js  useMdx.js  usePreserveScroll.js
